@@ -5,6 +5,9 @@
 # Usage: Link or copy into /etc/munin/node.d/
 #
 # $Log$
+# Revision 1.2  2004/05/16 12:34:26  jimmyo
+# Added "info"-fields to linux/cpu and linux/load plugins, to demonstrate how it works.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -51,7 +54,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_args --base 1000 -l 0'
 	# The Y-axis label
 	echo 'graph_vlabel load'
-    # We want Cur/Min/Avg/Max unscaled (i.e. 0.42 load instead of
+	# We want Cur/Min/Avg/Max unscaled (i.e. 0.42 load instead of
 	# 420 milliload)
 	echo 'graph_scale no'
 	# The fields. "label" is used in the legend. "label" is the only
@@ -62,6 +65,11 @@ if [ "$1" = "config" ]; then
 	# problems
 	echo 'load.warning 10'
 	echo 'load.critical 120'
+	# This one is purely to add an explanation to the web page. The first
+	# one is for the graph itself, while the second one is for the field
+	# "load".
+	echo 'graph_info The load average of the machine describes how many processes are in the run-queue (scheduled to run "immediately").'
+	echo 'load.info Average load for the last minute.'
 
 	# Last, if run with the "config"-parameter, quit here (don't
 	# display any data)
