@@ -7,6 +7,8 @@ munin (1.1.0)
   * Bugfix in the linux/df_inode plugin, regarding filesystems withouth
     inodes.
   * Added warning and critical statuses to the info table in the service view.
+  * Added "info"-fields to linux/cpu and linux/load plugins, to demonstrate
+    how it works.
 
 munin (1.1.0)
 
